[project]
authors = [{name = "MHR Contributors"}]
dependencies = ["torch", "trimesh>=4.8.3,<5", "pytest>=8.0"]
name = "mhr"
requires-python = ">= 3.11"
version = "0.1.0"

readme = "README.md"
license = {text = "Apache-2.0"}

[project.urls]
Homepage = "https://github.com/facebookresearch/MHR"
Repository = "https://github.com/facebookresearch/MHR"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["mhr"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.tasks]
test = { cmd = "pytest tests/ -v", description = "Run pytest tests with verbose output" }
build = { cmd = "python -m build", description = "Build source distribution and wheel" }
publish = { cmd = "twine upload --repository mhr dist/*", description = "Publish package to PyPI repository" }
clean = { cmd = "rm -rf dist build *.egg-info", description = "Remove build artifacts and distribution files" }
test_wheel = { cmd = "python scripts/test_wheel.py", description = "Test the built wheel in a fresh environment using uv" }

[tool.pixi.pypi-dependencies]
mhr = { path = ".", editable = true }
build = ">=1.0"
twine = ">=5.0"
uv = ">=0.5.0"

[tool.pixi.dependencies]
pymomentum = ">=0.1.90"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.environments]
default = ["py312"]
py312 = ["py312"]
py313 = ["py313"]
